--- a/src/styles/room.scss
+++ b/src/styles/room.scss
@@ -72,7 +72,7 @@
             
           }
 
-          > span{
+           span{
             margin-left: 8px;
             color: #29292e;
             font-weight: 500;
@@ -81,7 +81,7 @@
           }
         }
 
-        span{
+       > span{
           font-size: 14px;
           color: #737380;
           font-weight: 500;
@@ -97,6 +97,10 @@
           }
         }
       }  
+
+      .question-list{
+        margin-top: 32px
+      }
 
     } 
 
