--- a/src/styles/button.scss
+++ b/src/styles/button.scss
@@ -18,6 +18,12 @@
   img{
    margin-right: 8px;  
   }
+
+  &.outLined{
+    background: #FFF;
+    border: 1px solid #835afd;
+    color: #835afd;
+  }
     
   &:not(::disabled):hover {
     filter: brightness(0.9);
