--- a/src/styles/room.scss
+++ b/src/styles/room.scss
@@ -13,6 +13,16 @@
       > img{
         max-height: 45px;
       }
+
+      > div{
+        display: flex;
+        gap: 16px ;
+
+        button{
+          height: 48px;
+          margin-left: 16px;
+        }
+      }
     }
   }
 
