--- a/src/styles/room.scss
+++ b/src/styles/room.scss
@@ -1,5 +1,5 @@
-#page-room{
-  header{
+#page-room {
+  header {
     padding: 24px;
     border-bottom: 1px solid #e2e2e2;
 
@@ -10,93 +10,89 @@
       justify-content: space-between;
       align-items: center;
 
-      > img{
+      > img {
         max-height: 45px;
       }
 
-      > div{
+      > div {
         display: flex;
-        gap: 16px ;
+        gap: 16px;
 
-        button{
-          height: 48px;
-          margin-left: 16px;
+        button {
+          height: 40px;
         }
       }
     }
   }
 
-    main {
-      max-width: 800px;
-      margin: 0 auto;
+  main {
+    max-width: 800px;
+    margin: 0 auto;
 
-      .room-title {
-        margin: 31px 0 24px;
-        display: flex;
-        align-items: center;
+    .room-title {
+      margin: 32px 0 24px;
+      display: flex;
+      align-items: center;
 
-        h1 {
-           font-family: 'Poppins', sans-serif;
-           font-size:  24px;
-           color: #29292e;
-        }
-
-        span {
-          margin-left: 16px;
-          background: #e559f9;
-          border-radius: 99999px;
-          padding:  8px 16px;
-          color: #FFF;
-          font-size: 14px;
-        }
+      h1 {
+        font-family: 'Poppins', sans-serif;
+        font-size: 24px;
+        color: #29292e;
       }
 
-      form{
-        textarea{
-         width: 100%; 
-         border: 0;
-         padding: 16px;
-         border-radius: 8px;
-         background: #fefefe;
-         box-shadow: 8 2px 12px rgba(0, 0, 0, 0.84);
-         resize: vertical;
-         min-height: 130px;
-        }
+      span {
+        margin-left: 16px;
+        background: #e559f9;
+        border-radius: 9999px;
+        padding: 8px 16px;
+        color: #FFF;
+        font-weight: 500;
+        font-size: 14px;
+      }
+    }
 
+    form {
+      textarea {
+        width: 100%;
+        border: 0;
+        padding: 16px;
+        border-radius: 8px;
+        background: #fefefe;
+        box-shadow: 0 2px 12px rgba(0, 0, 0, 0.04);
+        resize: vertical;
+        min-height: 130px;
+      }
 
-        .form-footer{
-          display: flex; 
-          justify-content: space-between;
-          align-items: center;
-          margin-top: 16px;
-        }
+      .form-footer {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-top: 16px;
 
         .user-info {
-          display:  flex;
-          align-items:  center;
+          display: flex;
+          align-items: center;
 
-          img{
+          img {
             width: 32px;
             height: 32px;
             border-radius: 50%;
-            
           }
 
-           span{
+          span {
             margin-left: 8px;
             color: #29292e;
             font-weight: 500;
             font-size: 14px;
-            
           }
         }
 
-       > span{
+        > span {
           font-size: 14px;
           color: #737380;
           font-weight: 500;
 
-          button{
+          button {
             background: transparent;
             border: 0;
             color: #835AFD;
@@ -106,12 +102,11 @@
             cursor: pointer;
           }
         }
-      }  
-
-      .question-list{
-        margin-top: 32px
       }
+    }
 
-    } 
-
+    .question-list {
+      margin-top: 32px;
+    }
   }
+}
